CKA/LABS/Domain 4: Security/secret-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env
spec:
  containers:
    - image: nginx
      name: secret-env
