CKA/LABS/Domain 4: Security/secretmount.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secretmount
  name: secretmount
spec:
  containers:
    - image: nginx
      name: secretmount
      volumeMounts:
        - name: foo
          mountPath: "/etc/foo"
          readOnly: true
  volumes:
    - name: foo
      secret:
        secretName: firstsecret
